# notify-via-mqtt

./: .gitlint  Cargo.toml  README.md  example-config.json  example-config.toml  flake.nix  result
.github/workflows/: ci.yml  commit-lint.yml  flake-update.yml
src/: cli.rs  config.rs  main.rs
