[package]
name = "notify-from-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
miette = "7.2"
notify-rust = "4.11"
paho-mqtt = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [ "fs", "macros", "rt", "time" ] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
