[package]
name = "notify-via-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
miette = { version = "7.5", features = ["fancy"] }
notify-rust = { version = "4.11", default-features = false, features = ["zbus", "serde"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [ "macros", "rt", "time" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
